<?xml version="1.0"?>
<package format="3">
  <name>fielder_description</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="rsbdev@todo.todo">rsbdev</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
