<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fielder_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aimanfaris.af@gmail.com">rsbdev</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>asyncio</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
