<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fielder_odometry</name>
  <version>1.0.0</version>
  <description>TODO: ROS2 odometry bridge for Robopreneur Fielder AMR</description>
  <maintainer email="rapid@robopreneur.com">rsbdev</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>keyboard_handler</exec_depend>
  <exec_depend>asyncio</exec_depend>
  <exec_depend>pynput</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
